# SimpleNameHistoryService

./: .gitignore  Cargo.toml  LICENSE  README.md  merge.py
src/: config.rs  main.rs
src/client/: config.rs  data.rs  mod.rs
src/server/: config.rs  data.rs  mod.rs  namehistory.rs
src/storage/: config.rs  data.rs  mod.rs
src/utils/: configfile.rs  duration_fmt.rs  mod.rs
